--- a/res/layout-sw500dp/activity_main.xml
+++ b/res/layout-sw500dp/activity_main.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="vertical"
-    android:splitMotionEvents="false"
-    tools:context=".ActivityHost" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:baselineAligned="false"
+              android:orientation="vertical"
+              android:splitMotionEvents="false"
+              tools:context=".ActivityHost">
 
     <br.com.carlosrafaelgn.fplay.ui.BgListView
         android:id="@+id/list"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:nextFocusForward="@+id/barVolume" >
+        android:nextFocusForward="@+id/barVolume"
+        android:splitMotionEvents="false">
 
-        <requestFocus />
+        <requestFocus/>
     </br.com.carlosrafaelgn.fplay.ui.BgListView>
 
     <LinearLayout
         android:id="@+id/panelInfo"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:orientation="vertical"
-        android:padding="16dp" >
+        android:padding="16dp"
+        android:splitMotionEvents="false">
 
         <LinearLayout
-            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:orientation="horizontal"
-            android:weightSum="5" >
+            android:splitMotionEvents="false"
+            android:weightSum="5">
 
             <LinearLayout
-                android:splitMotionEvents="false"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:baselineAligned="false"
                 android:orientation="vertical"
-                android:paddingRight="32dp" >
+                android:paddingRight="32dp"
+                android:splitMotionEvents="false">
 
                 <TextView
                     android:id="@+id/lblTitleStatic"
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:singleLine="true"
-                    android:text="@string/title" />
+                    android:text="@string/title"/>
 
                 <TextView
                     android:id="@+id/lblTitle"
@@ -62,7 +62,7 @@
                     android:marqueeRepeatLimit="marquee_forever"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
-                    android:text="@string/nothing_playing" />
+                    android:text="@string/nothing_playing"/>
 
                 <TextView
                     android:id="@+id/lblArtistStatic"
@@ -70,7 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:singleLine="true"
-                    android:text="@string/artist" />
+                    android:text="@string/artist"/>
 
                 <TextView
                     android:id="@+id/lblArtist"
@@ -79,22 +79,22 @@
                     android:layout_marginBottom="32dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="@string/no_info" />
+                    android:text="@string/no_info"/>
             </LinearLayout>
 
             <LinearLayout
-                android:splitMotionEvents="false"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:baselineAligned="false"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:splitMotionEvents="false">
 
                 <RelativeLayout
-                    android:splitMotionEvents="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="32dp" >
+                    android:layout_marginBottom="32dp"
+                    android:splitMotionEvents="false">
 
                     <TextView
                         android:id="@+id/lblTrackStatic"
@@ -105,7 +105,7 @@
                         android:layout_marginBottom="8dp"
                         android:layout_marginRight="16dp"
                         android:singleLine="true"
-                        android:text="@string/track" />
+                        android:text="@string/track"/>
 
                     <TextView
                         android:id="@+id/lblTrack"
@@ -116,7 +116,7 @@
                         android:layout_below="@+id/lblTrackStatic"
                         android:gravity="center_horizontal"
                         android:singleLine="true"
-                        android:text="@string/no_info" />
+                        android:text="@string/no_info"/>
 
                     <TextView
                         android:id="@+id/lblAlbumStatic"
@@ -126,7 +126,7 @@
                         android:layout_marginBottom="8dp"
                         android:layout_toRightOf="@+id/lblTrackStatic"
                         android:singleLine="true"
-                        android:text="@string/album" />
+                        android:text="@string/album"/>
 
                     <TextView
                         android:id="@+id/lblAlbum"
@@ -136,7 +136,7 @@
                         android:layout_toRightOf="@+id/lblTrackStatic"
                         android:ellipsize="end"
                         android:singleLine="true"
-                        android:text="@string/no_info" />
+                        android:text="@string/no_info"/>
                 </RelativeLayout>
 
                 <TextView
@@ -145,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:singleLine="true"
-                    android:text="@string/duration" />
+                    android:text="@string/duration"/>
 
                 <TextView
                     android:id="@+id/lblLength"
@@ -153,18 +153,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:singleLine="true"
-                    android:text="@string/no_info" />
+                    android:text="@string/no_info"/>
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/panelSecondary"
-            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:baselineAligned="false"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:splitMotionEvents="false">
 
             <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
                 android:id="@+id/barSeek"
@@ -175,7 +175,7 @@
                 android:nextFocusForward="@+id/barVolume"
                 android:nextFocusLeft="@+id/list"
                 android:nextFocusRight="@+id/barVolume"
-                android:nextFocusUp="@+id/list" />
+                android:nextFocusUp="@+id/list"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
                 android:id="@+id/barVolume"
@@ -187,7 +187,7 @@
                 android:nextFocusForward="@+id/btnAdd"
                 android:nextFocusLeft="@+id/list"
                 android:nextFocusRight="@+id/btnAdd"
-                android:nextFocusUp="@+id/list" />
+                android:nextFocusUp="@+id/list"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnVolume"
@@ -200,14 +200,14 @@
                 android:nextFocusLeft="@+id/list"
                 android:nextFocusRight="@+id/btnAdd"
                 android:nextFocusUp="@+id/list"
-                android:visibility="gone" />
+                android:visibility="gone"/>
         </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/panelControls"
-            android:splitMotionEvents="false"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:splitMotionEvents="false">
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnAdd"
@@ -219,7 +219,7 @@
                 android:nextFocusForward="@+id/btnPrev"
                 android:nextFocusLeft="@+id/barVolume"
                 android:nextFocusRight="@+id/btnPrev"
-                android:nextFocusUp="@+id/barVolume" />
+                android:nextFocusUp="@+id/barVolume"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnPrev"
@@ -232,20 +232,20 @@
                 android:nextFocusForward="@+id/btnPlay"
                 android:nextFocusLeft="@+id/btnAdd"
                 android:nextFocusRight="@+id/btnPlay"
-                android:nextFocusUp="@+id/barVolume" />
+                android:nextFocusUp="@+id/barVolume"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
                 android:layout_centerHorizontal="true"
+                android:layout_marginRight="16dp"
                 android:contentDescription="@string/play"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnNext"
                 android:nextFocusLeft="@+id/btnPrev"
                 android:nextFocusRight="@+id/btnNext"
-                android:nextFocusUp="@+id/barVolume" />
+                android:nextFocusUp="@+id/barVolume"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnNext"
@@ -257,7 +257,7 @@
                 android:nextFocusForward="@+id/btnMenu"
                 android:nextFocusLeft="@+id/btnPlay"
                 android:nextFocusRight="@+id/btnMenu"
-                android:nextFocusUp="@+id/barVolume" />
+                android:nextFocusUp="@+id/barVolume"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnMenu"
@@ -269,7 +269,7 @@
                 android:nextFocusForward="@+id/list"
                 android:nextFocusLeft="@+id/btnNext"
                 android:nextFocusRight="@+id/list"
-                android:nextFocusUp="@+id/barVolume" />
+                android:nextFocusUp="@+id/barVolume"/>
         </RelativeLayout>
 
         <TextView
@@ -280,17 +280,17 @@
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="@string/msg_sel"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/panelSelection"
-            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:gravity="right"
             android:orientation="horizontal"
-            android:visibility="gone" >
+            android:splitMotionEvents="false"
+            android:visibility="gone">
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnMoveSel"
@@ -302,7 +302,7 @@
                 android:nextFocusForward="@+id/btnRemoveSel"
                 android:nextFocusLeft="@+id/list"
                 android:nextFocusRight="@+id/btnRemoveSel"
-                android:nextFocusUp="@+id/list" />
+                android:nextFocusUp="@+id/list"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnRemoveSel"
@@ -313,7 +313,7 @@
                 android:nextFocusForward="@+id/btnCancelSel"
                 android:nextFocusLeft="@+id/btnMoveSel"
                 android:nextFocusRight="@+id/btnCancelSel"
-                android:nextFocusUp="@+id/list" />
+                android:nextFocusUp="@+id/list"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnCancelSel"
@@ -325,7 +325,7 @@
                 android:nextFocusLeft="@+id/btnRemoveSel"
                 android:nextFocusRight="@+id/list"
                 android:nextFocusUp="@+id/list"
-                android:text="@string/cancel" />
+                android:text="@string/cancel"/>
         </LinearLayout>
     </LinearLayout>
 
