--- a/res/layout/activity_effects.xml
+++ b/res/layout/activity_effects.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="vertical"
-    android:splitMotionEvents="false"
-    tools:context=".ActivityHost" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:baselineAligned="false"
+              android:orientation="vertical"
+              android:splitMotionEvents="false"
+              tools:context=".ActivityHost">
 
     <RelativeLayout
         android:id="@+id/panelTop"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:splitMotionEvents="false">
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnGoBack"
@@ -21,9 +21,9 @@
             android:layout_alignParentLeft="true"
             android:contentDescription="@string/go_back"
             android:nextFocusLeft="@+id/btnChangeEffect"
-            android:nextFocusUp="@+id/btnChangeEffect" >
+            android:nextFocusUp="@+id/btnChangeEffect">
 
-            <requestFocus />
+            <requestFocus/>
         </br.com.carlosrafaelgn.fplay.ui.BgButton>
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
@@ -37,28 +37,28 @@
             android:nextFocusLeft="@+id/btnGoBack"
             android:nextFocusRight="@+id/chkEqualizer"
             android:nextFocusUp="@+id/btnChangeEffect"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/panelControls"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:splitMotionEvents="false">
 
         <LinearLayout
             android:id="@+id/panelEqualizer"
-            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:visibility="gone" >
+            android:splitMotionEvents="false"
+            android:visibility="gone">
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/chkEqualizer"
@@ -67,7 +67,7 @@
                 android:layout_marginBottom="8dp"
                 android:nextFocusLeft="@+id/btnMenu"
                 android:nextFocusUp="@+id/btnMenu"
-                android:text="@string/equalizer" />
+                android:text="@string/equalizer"/>
         </LinearLayout>
 
         <!-- <ScrollView
@@ -80,82 +80,82 @@
             android:orientation="vertical"
             android:visibility="gone" > -->
 
-            <LinearLayout
-                android:id="@+id/panelSecondary"
-                android:splitMotionEvents="false"
+        <LinearLayout
+            android:id="@+id/panelSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:splitMotionEvents="false"
+            android:visibility="gone">
+
+            <br.com.carlosrafaelgn.fplay.ui.BgButton
+                android:id="@+id/chkBass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:nextFocusDown="@+id/barBass"
+                android:nextFocusForward="@+id/barBass"
+                android:nextFocusLeft="@+id/btnGoBack"
+                android:nextFocusRight="@+id/barBass"
+                android:nextFocusUp="@+id/btnGoBack"
+                android:text="@string/bass_boost"/>
+
+            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
+                android:id="@+id/barBass"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone" >
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:nextFocusDown="@+id/chkVirtualizer"
+                android:nextFocusForward="@+id/chkVirtualizer"
+                android:nextFocusLeft="@+id/chkBass"
+                android:nextFocusRight="@+id/chkVirtualizer"
+                android:nextFocusUp="@+id/chkBass"/>
 
-                <br.com.carlosrafaelgn.fplay.ui.BgButton
-                    android:id="@+id/chkBass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:nextFocusDown="@+id/barBass"
-                    android:nextFocusForward="@+id/barBass"
-                    android:nextFocusLeft="@+id/btnGoBack"
-                    android:nextFocusRight="@+id/barBass"
-                    android:nextFocusUp="@+id/btnGoBack"
-                    android:text="@string/bass_boost" />
+            <br.com.carlosrafaelgn.fplay.ui.BgButton
+                android:id="@+id/chkVirtualizer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:nextFocusDown="@+id/barVirtualizer"
+                android:nextFocusForward="@+id/barVirtualizer"
+                android:nextFocusLeft="@+id/barBass"
+                android:nextFocusRight="@+id/barVirtualizer"
+                android:nextFocusUp="@+id/barBass"
+                android:text="@string/virtualization"/>
 
-                <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
-                    android:id="@+id/barBass"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:nextFocusDown="@+id/chkVirtualizer"
-                    android:nextFocusForward="@+id/chkVirtualizer"
-                    android:nextFocusLeft="@+id/chkBass"
-                    android:nextFocusRight="@+id/chkVirtualizer"
-                    android:nextFocusUp="@+id/chkBass" />
+            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
+                android:id="@+id/barVirtualizer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:nextFocusDown="@+id/btnChangeEffect"
+                android:nextFocusForward="@+id/btnChangeEffect"
+                android:nextFocusLeft="@+id/chkVirtualizer"
+                android:nextFocusRight="@+id/btnChangeEffect"
+                android:nextFocusUp="@+id/chkVirtualizer"/>
 
-                <br.com.carlosrafaelgn.fplay.ui.BgButton
-                    android:id="@+id/chkVirtualizer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:nextFocusDown="@+id/barVirtualizer"
-                    android:nextFocusForward="@+id/barVirtualizer"
-                    android:nextFocusLeft="@+id/barBass"
-                    android:nextFocusRight="@+id/barVirtualizer"
-                    android:nextFocusUp="@+id/barBass"
-                    android:text="@string/virtualization" />
+            <!-- <br.com.carlosrafaelgn.fplay.ui.BgButton
+                android:id="@+id/chkReverb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:nextFocusDown="@+id/btnChangeEffect"
+                android:nextFocusForward="@+id/btnChangeEffect"
+                android:nextFocusLeft="@+id/barVirtualizer"
+                android:nextFocusRight="@+id/btnChangeEffect"
+                android:nextFocusUp="@+id/barVirtualizer"
+                android:text="@string/reverb" />
 
-                <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
-                    android:id="@+id/barVirtualizer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:nextFocusDown="@+id/btnChangeEffect"
-                    android:nextFocusForward="@+id/btnChangeEffect"
-                    android:nextFocusLeft="@+id/chkVirtualizer"
-                    android:nextFocusRight="@+id/btnChangeEffect"
-                    android:nextFocusUp="@+id/chkVirtualizer" />
-
-                <!-- <br.com.carlosrafaelgn.fplay.ui.BgButton
-                    android:id="@+id/chkReverb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:nextFocusDown="@+id/btnChangeEffect"
-                    android:nextFocusForward="@+id/btnChangeEffect"
-                    android:nextFocusLeft="@+id/barVirtualizer"
-                    android:nextFocusRight="@+id/btnChangeEffect"
-                    android:nextFocusUp="@+id/barVirtualizer"
-                    android:text="@string/reverb" />
-
-                <TextView
-                    android:id="@+id/txtReverb"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/coming_soon" /> -->
-            </LinearLayout>
+            <TextView
+                android:id="@+id/txtReverb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/coming_soon" /> -->
+        </LinearLayout>
         <!-- </ScrollView> -->
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
@@ -166,7 +166,7 @@
             android:nextFocusDown="@+id/btnGoBack"
             android:nextFocusForward="@+id/btnGoBack"
             android:nextFocusRight="@+id/btnGoBack"
-            android:text="@string/more_effects" />
+            android:text="@string/more_effects"/>
     </LinearLayout>
 
 </LinearLayout>
