--- a/res/layout/main_widget_transparent.xml
+++ b/res/layout/main_widget_transparent.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:splitMotionEvents="false"
-    android:padding="@dimen/widget_margin" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/widget_margin"
+                android:splitMotionEvents="false">
 
     <RelativeLayout
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/btnPrev" >
+        android:layout_toLeftOf="@+id/btnPrev"
+        android:splitMotionEvents="false">
 
         <TextView
             android:id="@+id/lblTitle"
@@ -19,12 +19,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_widget_button"
             android:clickable="true"
-            android:focusable="true"
             android:ellipsize="end"
+            android:focusable="true"
             android:gravity="center"
             android:maxLines="2"
             android:padding="2dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/lblArtist"
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:padding="2dp"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:textSize="14sp"/>
     </RelativeLayout>
 
     <ImageButton
@@ -52,7 +52,7 @@
         android:nextFocusForward="@+id/btnPlay"
         android:nextFocusLeft="@+id/lblTitle"
         android:nextFocusRight="@+id/btnPlay"
-        android:padding="8dp" />
+        android:padding="8dp"/>
 
     <ImageButton
         android:id="@+id/btnPlay"
@@ -66,7 +66,7 @@
         android:nextFocusForward="@+id/btnNext"
         android:nextFocusLeft="@+id/btnPrev"
         android:nextFocusRight="@+id/btnNext"
-        android:padding="8dp" />
+        android:padding="8dp"/>
 
     <ImageButton
         android:id="@+id/btnNext"
@@ -77,6 +77,6 @@
         android:contentDescription="@string/next"
         android:focusable="true"
         android:nextFocusLeft="@+id/btnPlay"
-        android:padding="8dp" />
+        android:padding="8dp"/>
 
 </RelativeLayout>
