--- a/res/layout/notification_simple.xml
+++ b/res/layout/notification_simple.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:splitMotionEvents="false"
-    android:minHeight="64dp" >
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:minHeight="64dp"
+                android:splitMotionEvents="false">
 
     <ImageView
         android:id="@+id/imgIcon"
@@ -14,7 +14,7 @@
         android:contentDescription="@string/fplay"
         android:padding="2dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher"/>
 
     <TextView
         android:id="@+id/lblTitle"
@@ -25,6 +25,6 @@
         android:layout_toRightOf="@+id/imgIcon"
         android:ellipsize="end"
         android:gravity="center"
-        android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+        android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title"/>
 
 </RelativeLayout>
